# aristote-dispatcher

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile.consumer  Dockerfile.sender  LICENSE.md  README.md  alembic.ini  compose.yml  consumer-entrypoint.sh  create_user.sh  index.html  mkdocs.yml  pyproject.toml  sender-entrypoint.sh  sitemap.xml
.github/workflows/: ci.yml
alembic/: History.md  README.md  env.py
alembic/versions/: 212c4b4d9489_add_organization_fields_to_metrics_table.py  5dd94aeafd3c_decouple_tables.py  8e1d058df426_add_routing_mode_column_to_metrics_table.py  9cf7cf124677_initial_migration.py  c63af0f18c5d_default_routing_mode.py  e073ae55fc3f_add_routing_mode_column_to_metrics_table.py  fa7a30b960b4_add_fields_to_metric_entity.py
assets/: architecture-source.excalidraw
docs/: index.md  mkdocs.yml  troubleshooting.md
docs/stylesheets/: extra.css
grafana/: README.md
grafana/alerts/: group.json
grafana/dashboard/: overview.json
helm_chart/: Chart.yaml  README.md  values.yaml
helm_chart/templates/: _helpers.tpl  deployment-sender.yaml  ingress.yaml  statefull-set-consumer.yaml
helm_charts/: Chart.yaml  values.yaml
helm_charts/templates/: _helpers.tpl  consumer-pod-monitor.yaml  consumer-service.yaml  consumer-stateful-set.yaml  consumer-statefull-set.yaml  database-config-map.yaml  database-secret.yaml  deployment-sender.yaml  models-pvc.yaml  rabbitmq-cluster.yaml  rabbitmq-pod-monitor.yaml  (+7 more)
search/: search_index.json
troubleshooting/: index.html
workers/: README.md  compose.yml  requirements.txt
(+89 files in other folders)
